# blockchain

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.geth  Readme.md  docker-compose.yml  openapi.yaml
geth/: addresses.json  genesis.json
src/: error.rs  main.rs  prelude.rs  router.rs
src/domain/: account.rs  mod.rs  token.rs
src/environment/: config.rs  dev.toml  prod.toml
src/services/: blockchain_service.rs  ethereum.rs  mod.rs  validation_service.rs
