[package]
name = "kraken-assignment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blockchain-rest-api-server"
path = "src/main.rs"

[dependencies]
axum = "0.7.7"
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full", "signal"] }
tracing = "0.1.40"
async-trait = "0.1.83"
config = "0.14.0"
once_cell = "1.20.2"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http ={ version = "0.6.1", features = ["trace"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
ethers = { version = "2.0.14",  features = ["abigen"] }
